[tool.poetry]
name = "mtb_display"
version = "0.0.0"
description = "Bobcat MTB Display"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
asyncio-mqtt = "^0.10.0"
aztec-code-generator = "^0.11"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
black = "^22"
isort = "^5.6.4"
pytest = "^6.2.0"
pytest-black = "^0.3.12"
pytest-isort = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
